--- a/src/style.css
+++ b/src/style.css
@@ -31,20 +31,6 @@ h1 {
   font-weight: bold;
 }
 
-.banner > h1 {
-  color: rgb(255, 255, 255);
-  text-transform: uppercase;
-  font-size: 60px;
-  font-weight: 500;
-  background: linear-gradient(
-    to bottom,
-    var(--third-color) 50%,
-    var(--page-color)
-  );
-  padding: 50px 0;
-  text-align: center;
-}
-
 h2 {
   font-size: 54px;
 }
@@ -76,10 +62,48 @@ p {
   color: var(--contacts-color);
 }
 
+.banner {
+  position: relative;
+  text-align: center;
+}
+
+.banner > h1 {
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 60px;
+  font-weight: 500;
+  background: linear-gradient(
+    to bottom,
+    var(--third-color) 50%,
+    var(--page-color)
+  );
+  padding: 50px 0;
+  text-align: center;
+}
+
+.banner > img {
+  width: 100%;
+}
+
+.centered {
+  position: absolute;
+  top: 12%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.centered > h1 {
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 60px;
+  font-weight: 500;
+}
+
 /*------------------- Menu Styles-------------------*/
 .menu {
   margin-top: 25px;
   padding-left: 35px;
+  position: absolute;
 }
 
 .menu a {
@@ -232,48 +256,6 @@ ul {
   margin-top: 60px;
   width: 500px;
 }
-/* .call-b-lg {
-  display: block;
-  margin: 30px 30px 30px 30px;
-}
-
-.container {
-  border-radius: 5px;
-  background-color: var(--third-color);
-  padding: 20px;
-}
-
-input[type="text"],
-input[type="tel"],
-select,
-textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid var(--third-color);
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type="submit"] {
-  background-color: var(--secondary-color);
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="submit"]:hover {
-  background-color: var(--branding-color);
-  color: var(--contacts-color);
-}
-
-label[for="legacy"] {
-  display: inline;
-} */
 
 .map {
   display: block;
@@ -314,6 +296,12 @@ label[for="legacy"] {
     margin-left: 0;
   }
 
+  .menu {
+    margin-top: -13px;
+    padding-left: 15px;
+    position: absolute;
+  }
+
   .menu a {
     padding: 16px 10px;
   }
@@ -346,6 +334,21 @@ label[for="legacy"] {
 
   .banner > h1 {
     font-size: 50px;
+  }
+
+  .centered {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .centered > h1 {
+    color: rgb(255, 255, 255);
+    text-shadow: -1ch 0 2px var(--secondary-color), -1ch 0 black;
+    text-transform: uppercase;
+    font-size: 19px;
+    font-weight: 300;
   }
 
   .homepic {
