add active class

--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,10 @@ p {
   border-bottom: solid 1px var(--contacts-color);
 }
 
+.active {
+  border-bottom: solid 1px var(--contacts-color);
+}
+
 /* ---------------------------------------------- */
 
 .maincontent {
